# venomous_app_admin

./: .gitattributes  .gitignore  Makefile  README.md  commitlint.config.mjs  cz.config.cjs  docker-compose.dev.yml  package-lock.json  package.json
.husky/: commit-msg  pre-commit
admin_client/: .depcheckrc  .env  .env.development  .env.production  (+10 more)
admin_server/: README.md  pyproject.toml  requirements.txt
admin_server/common/base/: __init__.py
admin_server/common/base/serializers/: __init__.py  camelcase_serializer.py
admin_server/common/classes/: admin_export_import.py
admin_server/common/utils/: generate_files.py
admin_server/configs/: settings.py  urls.py
admin_server/configs/settings/: __init__.py  base.py  development.py  production.py
admin_server/scenario/: admin.py
admin_server/users/: urls.py
admin_server/users/serializers/: __init__.py  user_profile.py  user_register.py
admin_server/users/views/: __init__.py  user_login.py  user_logout.py  user_profile.py  user_refresh_access_token.py  user_register.py
admin_server/workflow/: admin.py  urls.py
admin_server/workflow/base/validation/: __init__.py  validate_workflow_data_element.py
admin_server/workflow/migrations/: 0001_init_workflow.py  0001_initial.py
admin_server/workflow/models/: workflow.py  workflow_data.py  workflow_history.py
admin_server/workflow/serializers/: __init__.py  workflow.py  workflow_data.py  workflow_history.py
admin_server/workflow/views/: __init__.py  workflow.py  workflow_data.py  workflow_data_download.py  workflow_download.py  workflow_history.py
(+598 files in other folders)
