[project]
name = "venomous_app_admin_server"
version = "2.0.0"
description = "blaxberry333's venomous apps admin server"


[tool.black]          
target-version = ['py310']          
line-length = 88  
include = '\.pyi?$'     
exclude = '''
/(
    \.venv                       
    | \.git                       
    | __pycache__                
    | migrations/ 
    | static
    | media            
)/
'''       
 